feat(datagrid): update logic and tests

--- a/projects/angular/src/emphasis/label/_labels.clarity.scss
+++ b/projects/angular/src/emphasis/label/_labels.clarity.scss
@@ -19,6 +19,12 @@
   &.label-#{$alias} {
     border: label-variables.$clr-label-borderwidth solid label-variables.getLabelColor($color, border-color);
     background-color: label-variables.getLabelColor($color, bg-color);
+
+    cds-icon,
+    clr-icon {
+      color: label-variables.$clr-label-font-color-light;
+      background-color: label-variables.getLabelColor($color, bg-color);
+    }
   }
 
   &.label-#{'' + $color} > .badge {
@@ -31,6 +37,12 @@
     background: label-variables.getLabelColor($status, bg-color);
     color: label-variables.getLabelColor($status, color);
     border: label-variables.$clr-label-borderwidth solid label-variables.getLabelColor($status, border-color);
+
+    cds-icon,
+    clr-icon {
+      background: label-variables.getLabelColor($status, bg-color);
+      color: label-variables.getLabelColor($status, color);
+    }
   }
   &.label-#{'' + $status} > .badge {
     background: badges-variables.getBadgeColor($status, bg-color);
@@ -93,6 +105,11 @@
 
     &:visited {
       color: label-variables.$clr-label-font-color-light;
+
+      cds-icon,
+      clr-icon {
+        color: label-variables.$clr-label-font-color-light;
+      }
     }
 
     &:focus,
@@ -108,12 +125,24 @@
         text-decoration: none;
         background: label-variables.$clr-label-bg-hover-color;
         color: label-variables.$clr-label-hover-color;
+
+        cds-icon,
+        clr-icon {
+          background: label-variables.$clr-label-bg-hover-color;
+          color: label-variables.$clr-label-hover-color;
+        }
       }
 
       &:active {
         color: label-variables.$clr-label-active-color;
         background: label-variables.$clr-label-bg-active-color;
         transform: translateY(tokens.$cds-global-space-2);
+
+        cds-icon,
+        clr-icon {
+          color: label-variables.$clr-label-active-color;
+          background: label-variables.$clr-label-bg-active-color;
+        }
       }
     }
 
@@ -134,10 +163,15 @@
     &.disabled,
     &:disabled {
       cursor: not-allowed;
-      pointer-events: none;
       background: label-variables.$clr-label-bg-disabled-color;
       color: label-variables.$clr-label-disabled-color;
       border-color: label-variables.$clr-label-disabled-border-color;
+
+      cds-icon,
+      clr-icon {
+        background: label-variables.$clr-label-bg-disabled-color;
+        color: label-variables.$clr-label-disabled-color;
+      }
 
       .badge {
         background: label-variables.$clr-label-disabled-color;
