--- a/projects/demo/src/app/labels/labels-with-badges.demo.html
+++ b/projects/demo/src/app/labels/labels-with-badges.demo.html
@@ -8,9 +8,10 @@
 <h2>Angular Label</h2>
 <div class="clr-example">
   <div>
-    <clr-label [clrColor]="ClrLabelColors.Purple" [clrBadgeContent]="'1'" [clrClickable]="true" [clrClosable]="true"
-      >Austin</clr-label
-    >
+    <clr-label [clrColor]="ClrLabelColors.Purple" [clrBadgeContent]="'1'" [clrClickable]="true">
+      Austin
+      <cds-icon shape="close"></cds-icon>
+    </clr-label>
     <clr-label [clrColor]="ClrLabelColors.Blue" [clrBadgeContent]="'2'" [clrClickable]="true">New York</clr-label>
     <clr-label [clrColor]="ClrLabelColors.Orange" [clrBadgeContent]="'3'" [clrClickable]="true">Palo Alto</clr-label>
     <clr-label [clrColor]="ClrLabelColors.LightBlue" [clrBadgeContent]="'12'" [clrClickable]="true"
