--- a/projects/demo/src/app/datagrid/sorting/sorting.html
+++ b/projects/demo/src/app/datagrid/sorting/sorting.html
@@ -81,8 +81,13 @@
 <clr-datagrid>
   <clr-dg-column>User ID</clr-dg-column>
   <clr-dg-column>Name</clr-dg-column>
-  <clr-dg-column>Creation date</clr-dg-column>
-  <clr-dg-column [clrDgField]="'pokemon.name'" [clrDgSortBy]="pokemonComparator" [(clrDgSortOrder)]="sortOrder">
+  <clr-dg-column [clrDgField]="'creation'" [clrDgSortBy]="userCreationComparator">Creation date</clr-dg-column>
+  <clr-dg-column
+    [clrDgField]="'pokemon.name'"
+    [clrDgSortBy]="pokemonComparator"
+    [(clrDgSortOrder)]="sortOrder"
+    [clrDgDisableUnsort]="true"
+  >
     Pokemon
   </clr-dg-column>
   <clr-dg-column>Favorite color</clr-dg-column>
