--- a/projects/angular/src/data/_variables.tables.scss
+++ b/projects/angular/src/data/_variables.tables.scss
@@ -31,6 +31,7 @@ $clr-thead-color: var(--clr-thead-color) !default;
 
 $clr-table-fontsize: var(--clr-table-fontsize) !default;
 
+$clr-table-cell-height: var(--clr-table-cell-height) !default;
 $clr-table-row-height: var(--clr-table-row-height) !default;
 // @deprecated ALL compact properties in favor of compact mode in density theme
 $clr-table-cell-compact-padding: var(--clr-table-cell-compact-padding) !default;
