fix(label): pr feedback

--- a/projects/demo/src/app/labels/labels-with-badges.demo.html
+++ b/projects/demo/src/app/labels/labels-with-badges.demo.html
@@ -8,17 +8,17 @@
 <h2>Angular Label</h2>
 <div class="clr-example">
   <div>
-    <clr-label [clrColor]="ClrLabelColors.Purple" [clrBadgeContent]="'1'" [clrClickable]="true">
+    <clr-label [clrColor]="ClrLabelColors.Purple" [clrBadgeText]="'1'" [clrClickable]="true">
       Austin
       <cds-icon shape="close"></cds-icon>
     </clr-label>
-    <clr-label [clrColor]="ClrLabelColors.Blue" [clrBadgeContent]="'2'" [clrClickable]="true">New York</clr-label>
-    <clr-label [clrColor]="ClrLabelColors.Orange" [clrBadgeContent]="'3'" [clrClickable]="true">Palo Alto</clr-label>
-    <clr-label [clrColor]="ClrLabelColors.LightBlue" [clrBadgeContent]="'12'" [clrClickable]="true"
+    <clr-label [clrColor]="ClrLabelColors.Blue" [clrBadgeText]="'2'" [clrClickable]="true">New York</clr-label>
+    <clr-label [clrColor]="ClrLabelColors.Orange" [clrBadgeText]="'3'" [clrClickable]="true">Palo Alto</clr-label>
+    <clr-label [clrColor]="ClrLabelColors.LightBlue" [clrBadgeText]="'12'" [clrClickable]="true"
       >San Francisco</clr-label
     >
-    <clr-label [clrBadgeContent]="'15+'" [clrClickable]="true">Seattle</clr-label>
-    <clr-label [clrBadgeContent]="'0'" [clrClickable]="true" [clrDisabled]="true">Philadephia</clr-label>
+    <clr-label [clrBadgeText]="'15+'" [clrClickable]="true">Seattle</clr-label>
+    <clr-label [clrBadgeText]="'0'" [clrClickable]="true" [clrDisabled]="true">Philadephia</clr-label>
   </div>
 </div>
 
