--- a/projects/angular/src/data/_properties.tables.scss
+++ b/projects/angular/src/data/_properties.tables.scss
@@ -15,7 +15,8 @@
     --clr-table-noborder-borderwidth: #{tokens.$cds-global-space-0};
 
     // @deprecated ALL compact properties in favor of compact mode in density theme
-    --clr-table-compact-row-height: #{tokens.$cds-global-space-9};
+    --clr-table-compact-cell-height: #{tokens.$cds-global-space-9};
+    --clr-table-compact-row-height: calc(var(--clr-table-compact-cell-height) + var(--clr-table-borderwidth));
     --clr-table-compact-vertical-padding: #{tokens.$cds-global-space-3};
     --clr-table-compact-horizontal-padding: #{tokens.$cds-global-space-6};
     --clr-table-cell-compact-padding: var(--clr-table-compact-vertical-padding)
