--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -1050,6 +1050,12 @@
     }
 
     .datagrid-row {
+      min-height: tables-variables.$clr-table-compact-row-height;
+
+      &:first-of-type {
+        min-height: calc(tables-variables.$clr-table-compact-row-height - tables-variables.$clr-table-borderwidth);
+      }
+
       .datagrid-row-detail .datagrid-cell.datagrid-container {
         font-size: mixins.baselinePx(13);
         line-height: tokens.$cds-global-space-8;
@@ -1080,7 +1086,7 @@
     .datagrid-detail-caret {
       .datagrid-detail-caret-button {
         @include datagrid-action-button-styles(
-          tables-variables.$clr-table-compact-row-height,
+          tables-variables.$clr-table-compact-cell-height,
           datagrid-variables.$clr-datagrid-compact-fixed-column-size,
           tokens.$cds-global-space-7
         );
@@ -1104,7 +1110,7 @@
 
       .datagrid-expandable-caret-button {
         @include datagrid-action-button-styles(
-          tables-variables.$clr-table-compact-row-height,
+          tables-variables.$clr-table-compact-cell-height,
           datagrid-variables.$clr-datagrid-compact-fixed-column-size,
           tokens.$cds-global-space-7
         );
@@ -1123,7 +1129,7 @@
     .datagrid-row-actions {
       .datagrid-action-toggle {
         @include datagrid-action-button-styles(
-          tables-variables.$clr-table-compact-row-height,
+          tables-variables.$clr-table-compact-cell-height,
           datagrid-variables.$clr-datagrid-compact-fixed-column-size,
           tokens.$cds-global-space-7
         );
@@ -1148,7 +1154,7 @@
         [shape='info'],
         [shape='error']
       ) {
-        @include mixins.equilateral(tables-variables.$clr-table-compact-row-height);
+        @include mixins.equilateral(tables-variables.$clr-table-compact-cell-height);
       }
     }
 
