fix(datagrid): virtual scroll row height calculation (#2052)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [x] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Issue Number: CDE-2976

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

---------

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -80,7 +80,7 @@
   }
 }
 @mixin datagrid-action-button-styles(
-  $height: tables-variables.$clr-table-row-height,
+  $height: tables-variables.$clr-table-cell-height,
   $columnWidth: datagrid-variables.$clr-datagrid-fixed-column-size,
   $iconSize: datagrid-variables.$clr-datagrid-icon-size
 ) {
@@ -149,6 +149,14 @@
           flex: 1 1 auto;
         }
       }
+
+      .datagrid-placeholder-container {
+        display: none;
+
+        &:has(> .datagrid-placeholder.datagrid-empty) {
+          display: flex;
+        }
+      }
     }
   }
 
@@ -183,9 +191,11 @@
 
   .datagrid-row {
     border-top: tables-variables.$clr-table-borderwidth solid tables-variables.$clr-table-border-color;
+    min-height: tables-variables.$clr-table-row-height;
 
     &:first-of-type {
       border-top: none;
+      min-height: calc(tables-variables.$clr-table-row-height - tables-variables.$clr-table-borderwidth);
     }
 
     &:hover,
@@ -296,11 +306,11 @@
 
     .datagrid-signpost-trigger .signpost {
       margin: calc(-1 * density.$clr-base-vertical-offset-multi-row-inline-m) 0;
-      height: tables-variables.$clr-table-row-height;
+      height: tables-variables.$clr-table-cell-height;
 
       .signpost-trigger {
         height: inherit;
-        line-height: tables-variables.$clr-table-row-height;
+        line-height: tables-variables.$clr-table-cell-height;
       }
     }
 
@@ -659,11 +669,11 @@
 
       .datagrid-signpost-trigger .signpost {
         margin: calc(-1 * tokens.$cds-global-space-5) 0;
-        height: tables-variables.$clr-table-row-height;
+        height: tables-variables.$clr-table-cell-height;
 
         .signpost-trigger {
           height: inherit;
-          line-height: tables-variables.$clr-table-row-height;
+          line-height: tables-variables.$clr-table-cell-height;
         }
       }
 
@@ -1038,6 +1048,12 @@
     }
 
     .datagrid-row {
+      min-height: tables-variables.$clr-table-compact-row-height;
+
+      &:first-of-type {
+        min-height: calc(tables-variables.$clr-table-compact-row-height - tables-variables.$clr-table-borderwidth);
+      }
+
       .datagrid-row-detail .datagrid-cell.datagrid-container {
         font-size: mixins.baselinePx(13);
         line-height: tokens.$cds-global-space-8;
@@ -1068,7 +1084,7 @@
     .datagrid-detail-caret {
       .datagrid-detail-caret-button {
         @include datagrid-action-button-styles(
-          tables-variables.$clr-table-compact-row-height,
+          tables-variables.$clr-table-compact-cell-height,
           datagrid-variables.$clr-datagrid-compact-fixed-column-size,
           tokens.$cds-global-space-7
         );
@@ -1092,7 +1108,7 @@
 
       .datagrid-expandable-caret-button {
         @include datagrid-action-button-styles(
-          tables-variables.$clr-table-compact-row-height,
+          tables-variables.$clr-table-compact-cell-height,
           datagrid-variables.$clr-datagrid-compact-fixed-column-size,
           tokens.$cds-global-space-7
         );
@@ -1111,7 +1127,7 @@
     .datagrid-row-actions {
       .datagrid-action-toggle {
         @include datagrid-action-button-styles(
-          tables-variables.$clr-table-compact-row-height,
+          tables-variables.$clr-table-compact-cell-height,
           datagrid-variables.$clr-datagrid-compact-fixed-column-size,
           tokens.$cds-global-space-7
         );
@@ -1136,7 +1152,7 @@
         [shape='info'],
         [shape='error']
       ) {
-        @include mixins.equilateral(tables-variables.$clr-table-compact-row-height);
+        @include mixins.equilateral(tables-variables.$clr-table-compact-cell-height);
       }
     }
 
@@ -1643,9 +1659,7 @@
       gap: density.$clr-base-gap-xs;
       max-height: mixins.baselinePx(300);
       overflow-y: auto;
-      min-height: calc(
-        tables-variables.$clr-table-row-height + tokens.$cds-alias-object-border-width-100
-      ); // prevents scrollbars in IE.
+      min-height: tables-variables.$clr-table-row-height; // prevents scrollbars in IE.
 
       // Increase specificity
       &.list-unstyled {
