--- a/projects/angular/src/data/datagrid/_variables.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_variables.datagrid.scss
@@ -90,12 +90,12 @@ $clr-datagrid-column-separator-expandby: var(--clr-datagrid-column-separator-exp
 $clr-datagrid-icon-size: var(--clr-datagrid-icon-size) !default;
 $clr-datagrid-action-arrow-size: var(--clr-datagrid-action-arrow-size) !default;
 $clr-datagrid-expandable-row-spinner-margin: calc(
-  (tables-variables.$clr-table-row-height - spinner-variables.$clr-spinner-small-size) / 2
+  (tables-variables.$clr-table-cell-height - spinner-variables.$clr-spinner-small-size) / 2
 );
 // @deprecated in favor of compact mode in density theme
 // using the compact value of spinner-variables.$clr-spinner-small-size as cds-global-space-7
 $clr-datagrid-compact-expandable-row-spinner-margin: calc(
-  (tables-variables.$clr-table-compact-row-height - #{tokens.$cds-global-space-7}) / 2
+  (tables-variables.$clr-table-compact-cell-height - #{tokens.$cds-global-space-7}) / 2
 );
 $clr-datagrid-compact-fixed-column-size: calc(
   #{tokens.$cds-global-space-7} + (#{tables-variables.$clr-table-compact-horizontal-padding} * 2)
