--- a/projects/angular/src/data/_tables.clarity.scss
+++ b/projects/angular/src/data/_tables.clarity.scss
@@ -42,7 +42,7 @@
     }
 
     #{$td} {
-      min-height: table-variables.$clr-table-row-height;
+      min-height: table-variables.$clr-table-cell-height;
 
       @include mixins.generate-typography-token('BODY-14-RG-CPT');
     }
@@ -102,7 +102,7 @@
     --clr-table-cell-vertical-padding: #{table-variables.$clr-table-compact-vertical-padding};
     #{$th},
     #{$td} {
-      min-height: table-variables.$clr-table-compact-row-height;
+      min-height: table-variables.$clr-table-compact-cell-height;
       padding: table-variables.$clr-table-cell-compact-padding;
     }
     #{$td} {
