feat(popover): general refactor and dropdown

--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -315,4 +315,18 @@
       }
     }
   }
+
+  .clr-dropdown {
+    .dropdown-menu {
+      display: none;
+      visibility: visible;
+    }
+  }
+
+  .clr-dropdown-container {
+    & > .dropdown-menu {
+      display: block;
+      visibility: visible;
+    }
+  }
 }
