--- a/projects/angular/src/button/button-group/_button-group.clarity.scss
+++ b/projects/angular/src/button/button-group/_button-group.clarity.scss
@@ -187,5 +187,6 @@
 
   .dropdown-menu.clr-button-group-menu {
     visibility: visible;
+    position: sticky; // reset the position since the dropdown-menu styles set the position to absolute
   }
 }
