feat(popover): dropdown and combobox

--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -98,6 +98,8 @@
   .dropdown-menu {
     @include menu-mixins.generate-dropdown-menu();
 
+    display: none;
+
     .dropdown-header {
       @include menu-mixins.generate-dropdown-header();
 
