--- a/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
@@ -15,7 +15,7 @@
 @mixin generate-dropdown-menu() {
   display: flex;
   flex-direction: column;
-  //position: absolute;
+  position: absolute;
   top: 100%;
   left: 0;
 
