--- a/projects/angular/src/utils/popover/_popover-popover.clarity.scss
+++ b/projects/angular/src/utils/popover/_popover-popover.clarity.scss
@@ -11,10 +11,10 @@
 @use '@angular/cdk/overlay-prebuilt.css';
 
 @include mixins.exports('smart-popover.clarity') {
-  .clr-popover-content {
-    position: fixed;
-    z-index: map.get(variables.$clr-layers, smart-popover);
-  }
+  //.clr-popover-content {
+  //  position: fixed;
+  //  z-index: map.get(variables.$clr-layers, smart-popover);
+  //}
 
   .clr-container-element {
     // position: absolute;
