feat(datagrid): expose margin and action-bar offset tokens (#2071)
Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [ ] Bugfix
- [X] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: N/A

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

---------

Co-authored-by: Valentin Mladenov <valentin.mladenov@broadcom.com>

--- a/projects/angular/src/data/datagrid/_properties.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_properties.datagrid.scss
@@ -21,9 +21,13 @@
     --clr-datagrid-column-separator-expandby: #{tokens.$cds-global-space-6};
     --clr-datagrid-action-arrow-size: #{tokens.$cds-global-space-4};
     --clr-datagrid-cell-outline-offset: calc(-1 * #{tokens.$cds-global-space-2});
+    --clr-datagrid-compact-margin-top: #{tokens.$cds-global-space-5};
+    --clr-datagrid-compact-action-bar-offset: #{mixins.baselinePx(20)};
 
     &,
     [clr-density] {
+      --clr-datagrid-margin-top: #{density.$clr-base-vertical-offset-l};
+      --clr-datagrid-action-bar-offset: #{density.$clr-base-vertical-offset-2xl};
       --clr-datagrid-column-toggle-padding: 0 #{density.$clr-base-horizontal-offset-m};
 
       --clr-datagrid-detail-pane-content-padding: #{density.$clr-base-vertical-offset-xl} #{density.$clr-base-horizontal-offset-xl};
