--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -391,15 +391,13 @@
   }
 
   .datagrid-action-bar {
-    $action-bar-offset: density.$clr-base-vertical-offset-2xl;
-
-    margin-top: $action-bar-offset;
+    margin-top: datagrid-variables.$clr-datagrid-action-bar-offset;
 
     // This changes the height and position of the datagrid-spinner when there is an action-bar
     // Allows us to cover the action-bar with the spinner backgdrop and prevent user interactions.
     & ~ .datagrid-outer-wrapper .datagrid-spinner {
-      height: calc(100% - #{$action-bar-offset});
-      top: $action-bar-offset; // Account for the margin above the datagrid-action-bar
+      height: calc(100% - #{datagrid-variables.$clr-datagrid-action-bar-offset});
+      top: datagrid-variables.$clr-datagrid-action-bar-offset; // Account for the margin above the datagrid-action-bar
     }
   }
 
@@ -970,7 +968,7 @@
   // @deprecated CSS rule `.datagrid-compact { ... }` in favor of compact mode in density theme
   .datagrid-compact {
     .datagrid {
-      margin-top: tokens.$cds-global-space-5;
+      margin-top: datagrid-variables.$clr-datagrid-compact-margin-top;
     }
 
     .datagrid-spinner {
@@ -979,12 +977,11 @@
     }
 
     .datagrid-action-bar {
-      $action-bar-offset: mixins.baselinePx(20);
-      margin-top: $action-bar-offset;
+      margin-top: datagrid-variables.$clr-datagrid-compact-action-bar-offset;
 
       & ~ .datagrid-outer-wrapper .datagrid-spinner {
-        height: calc(100% - #{$action-bar-offset});
-        top: $action-bar-offset;
+        height: calc(100% - #{datagrid-variables.$clr-datagrid-compact-action-bar-offset});
+        top: datagrid-variables.$clr-datagrid-compact-action-bar-offset;
       }
     }
 
