--- a/projects/demo/src/app/dropdown/dropdown-angular-nested.demo.html
+++ b/projects/demo/src/app/dropdown/dropdown-angular-nested.demo.html
@@ -50,7 +50,7 @@
 <div class="clr-example squeeze demo-menu-height dropdown-demo">
   <clr-dropdown>
     <button class="btn btn-outline-primary" clrDropdownTrigger id="current1">
-      Dropdown
+      clrIfOpen Dropdown
       <cds-icon shape="angle" direction="down"></cds-icon>
     </button>
     <clr-dropdown-menu *clrIfOpen>
@@ -59,15 +59,21 @@
       <div aria-label="Drowpdown header Disabled Action" clrDropdownItem clrDisabled>Disabled Action</div>
       <div class="dropdown-divider" role="separator" aria-hidden="true"></div>
       <clr-dropdown>
-        <button clrDropdownTrigger [id]="'sub-menu-3'">Link 1</button>
+        <button clrDropdownTrigger [id]="'sub-menu-3'">clrIfOpen Link 1</button>
         <clr-dropdown-menu *clrIfOpen>
-          <div clrDropdownItem>Foo</div>
           <clr-dropdown>
-            <button clrDropdownTrigger [id]="'sub-menu-4'">Bar</button>
+            <button clrDropdownTrigger [id]="'sub-menu-4'">clrIfOpen Bar</button>
             <clr-dropdown-menu clrPosition="left-bottom" *clrIfOpen>
               <div clrDropdownItem>Baz</div>
+              <clr-dropdown>
+                <button clrDropdownTrigger clrDisabled [id]="'sub-menu-4'">disabled clrIfOpen Ala</button>
+                <clr-dropdown-menu clrPosition="left-bottom" *clrIfOpen>
+                  <div clrDropdownItem>Bala</div>
+                </clr-dropdown-menu>
+              </clr-dropdown>
             </clr-dropdown-menu>
           </clr-dropdown>
+          <div clrDropdownItem>Foo</div>
         </clr-dropdown-menu>
       </clr-dropdown>
       <div clrDropdownItem>Link 2</div>
@@ -78,7 +84,7 @@
     <div style="margin-top: 400px"></div>
     <clr-dropdown>
       <button class="btn btn-outline-primary" clrDropdownTrigger>
-        Relative position Dropdown
+        clrIfOpen Relative position Dropdown
         <cds-icon shape="angle" direction="down"></cds-icon>
       </button>
       <clr-dropdown-menu clrPosition="bottom-left" *clrIfOpen>
@@ -87,7 +93,7 @@
         <div aria-label="Dropdown header Disabled Action" [clrDisabled]="true" clrDropdownItem>Disabled Action</div>
         <div class="dropdown-divider" role="separator" aria-hidden="true"></div>
         <clr-dropdown>
-          <button clrDropdownTrigger>Link 1</button>
+          <button clrDropdownTrigger>clrIfOpen Link 1</button>
           <clr-dropdown-menu>
             <button clrDropdownItem>Foo</button>
             <clr-dropdown>
