fix(datagrid): detail pane margin to use new margin tokens (#2077)
Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

Detail pane margin top is not using the newly introduced tokens in #2071

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: N/A

Using the new tokens.

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -985,7 +985,8 @@
     }
 
     .datagrid-detail-pane {
-      margin-top: tokens.$cds-global-space-5;
+      margin-top: datagrid-variables.$clr-datagrid-compact-margin-top;
+
       &-content {
         padding: tokens.$cds-global-space-6;
         .datagrid-detail-header {
@@ -1392,7 +1393,7 @@
   }
 
   .datagrid-detail-pane {
-    margin-top: density.$clr-base-vertical-offset-l;
+    margin-top: datagrid-variables.$clr-datagrid-margin-top;
     border-width: tokens.$cds-alias-object-border-width-100;
     border-style: solid;
     border-color: datagrid-variables.$clr-datagrid-detail-pane-border-color;
